--- a/gui/slick/css/app.css
+++ b/gui/slick/css/app.css
@@ -3,3 +3,7 @@ pre {
     word-wrap: normal;
     white-space: pre;
 }
+
+.tablesorter-sticky-wrapper.tablesorter-sticky-visible {
+    top: 50px !important;
+}
