start on schedule.mako -> angular conversion

--- a/gui/slick/templates/home.html
+++ b/gui/slick/templates/home.html
@@ -38,9 +38,7 @@
             </div>
 
             <span class="show-option"> Layout:
-                <select ng-model="layout" ng-options="layout as layout for layout in layouts" name="layout" class="form-control form-control-inline input-sm">
-                    {{layout}}
-                </select>
+                <select ng-model="layout" ng-options="layout as layout for layout in layouts" name="layout" class="form-control form-control-inline input-sm"></select>
             </span>
         </td>
     </tr>
