Start on adding dates to schedule

--- a/gui/slick/templates/schedule.html
+++ b/gui/slick/templates/schedule.html
@@ -33,3 +33,6 @@
 </div>
 <br>
 <div ng-if="layout === 'banner'" ui-view="banner" />
+<div ng-if="layout === 'poster'" ui-view="poster" />
+<div ng-if="layout === 'calendar'" ui-view="calendar" />
+<div ng-if="layout === 'list'" ui-view="list" />
