--- a/gui/slick/templates/partials/schedule/banner.html
+++ b/gui/slick/templates/partials/schedule/banner.html
@@ -1,59 +1,61 @@
-<h2 class="day">Missed</h2>
-<div ng-repeat="episode in episodes.missed" class="ep_listing listing-overdue" id="{{'listing-' + episode.showId}}">
-    <div class="tvshowDiv">
-        <table width="100%" border="0" cellpadding="0" cellspacing="0">
-            <tr>
-                <th class="nobg" valign="top">
-                    <a href="{{'#/displayShow?showId=' + episode.showId}}">
-                        <img alt="" class="bannerThumb" ng-src="{{'showPoster/?show=' + episode.showId + '&amp;which=banner'}}" />
-                    </a>
-                </th>
-            </tr>
-            <tr>
-                <td class="next_episode">
-                    <div class="clearfix">
-                        <span class="tvshowTitle">
-                            <a href="{{'#/displayShow?showId=' + episode.showId}}">{{episode.showName}} <span ng-if="episode.paused" class="pause">[paused]</span>
-                            </a>
-                        </span>
-
-                        <span class="tvshowTitleIcons">
-                            <a ng-if="episode.imdbId" anon-href="{{'http://www.imdb.com/title/' + episode.imdbId}}" title="IMDB">
-                                <img alt="[imdb]" height="16" width="16" src="images/imdb.png" />
-                            </a>
-                            <a anon-href="{{indexers[episode.indexer].showUrl + episode.showId}}">
-                                <img alt="{{indexers[episode.indexer].name}}" height="16" width="16" src="{{'images/' + indexers[episode.indexer].icon}}" />
-                            </a>
-                            <span>
-                                <a href="{{'home/searchEpisode?show=' + episode.showId + '&amp;season=' + episode.seasonNumber + '&amp;episode=' + episode.episodeNumber}}" title="Manual Search" id="{{'forceUpdate-' + episode.showId}}" class="epSearch forceUpdate">
-                                    <img alt="[search]" height="16" width="16" src="images/search16.png" id="{{'forceUpdateImage-' + episode.showId}}" />
+<div ng-repeat="group in groups">
+    <h2 ng-if="group.episodes" class="day">{{group.name}}</h2>
+    <div ng-if="group.episodes" ng-repeat="episode in group.episodes" class="ep_listing listing-overdue" id="{{'listing-' + episode.showId}}">
+        <div class="tvshowDiv">
+            <table width="100%" border="0" cellpadding="0" cellspacing="0">
+                <tr>
+                    <th class="nobg" valign="top">
+                        <a href="{{'#/displayShow?showId=' + episode.showId}}">
+                            <img alt="" class="bannerThumb" ng-src="{{'showPoster/?show=' + episode.showId + '&amp;which=banner'}}" />
+                        </a>
+                    </th>
+                </tr>
+                <tr>
+                    <td class="next_episode">
+                        <div class="clearfix">
+                            <span class="tvshowTitle">
+                                <a href="{{'#/displayShow?showId=' + episode.showId}}">{{episode.showName}} <span ng-if="episode.paused" class="pause">[paused]</span>
                                 </a>
                             </span>
-                        </span>
-                    </div>
 
-                    <span class="title">Next Episode:</span> <span>{{seasonString(episode.seasonNumber, episode.episodeNumber) + ' - ' + episode.episodeName}}</span>
+                            <span class="tvshowTitleIcons">
+                                <a ng-if="episode.imdbId" anon-href="{{'http://www.imdb.com/title/' + episode.imdbId}}" title="IMDB">
+                                    <img alt="[imdb]" height="16" width="16" src="images/imdb.png" />
+                                </a>
+                                <a anon-href="{{indexers[episode.indexer].showUrl + episode.showId}}">
+                                    <img alt="{{indexers[episode.indexer].name}}" height="16" width="16" src="{{'images/' + indexers[episode.indexer].icon}}" />
+                                </a>
+                                <span>
+                                    <a href="{{'home/searchEpisode?show=' + episode.showId + '&amp;season=' + episode.seasonNumber + '&amp;episode=' + episode.episodeNumber}}" title="Manual Search" id="{{'forceUpdate-' + episode.showId}}" class="epSearch forceUpdate">
+                                        <img alt="[search]" height="16" width="16" src="images/search16.png" id="{{'forceUpdateImage-' + episode.showId}}" />
+                                    </a>
+                                </span>
+                            </span>
+                        </div>
 
-                    <div class="clearfix">
-                        <span class="title">Airs: </span><span class="airdate">{{episode.airs.local}}</span>{{episode.network ? ' on ' + episode.network : ''}}
-                    </div>
+                        <span class="title">Next Episode:</span> <span>{{seasonString(episode.seasonNumber, episode.episodeNumber) + ' - ' + episode.episodeName}}</span>
 
-                    <div class="clearfix">
-                        <span class="title">Quality:</span>
-                        <span title="{{episode.qualityPill.title}}" class="{{episode.qualityPill.class}}">{{episode.qualityPill.qualityString}}</span>
-                    </div>
+                        <div class="clearfix">
+                            <span class="title">Airs: </span><span class="airdate">{{episode.airs.local}}</span>{{episode.network ? ' on ' + episode.network : ''}}
+                        </div>
 
-                    <div ng-if="episode.description" class="ep_summaryTrigger">
-                        <span class="title" style="vertical-align:middle;">Plot:</span>
-                        <img class="ep_summaryTrigger" ng-src="images/plus.png" height="16" width="16" alt="" title="Toggle Summary" />
-                        <div class="ep_summary">{{episode.description}}</div>
-                    </div>
-                    <div ng-if="!episode.description" class="ep_summaryTriggerNone">
-                        <span class="title" style="vertical-align:middle;">Plot:</span>
-                        <img ng-src="images/plus.png" height="16" width="16" alt="" />
-                    </div>
-                </td>
-            </tr>
-        </table>
+                        <div class="clearfix">
+                            <span class="title">Quality:</span>
+                            <span title="{{episode.qualityPill.title}}" class="{{episode.qualityPill.class}}">{{episode.qualityPill.qualityString}}</span>
+                        </div>
+
+                        <div ng-if="episode.description" class="ep_summaryTrigger">
+                            <span class="title" style="vertical-align:middle;">Plot:</span>
+                            <img class="ep_summaryTrigger" ng-src="images/plus.png" height="16" width="16" alt="" title="Toggle Summary" />
+                            <div class="ep_summary">{{episode.description}}</div>
+                        </div>
+                        <div ng-if="!episode.description" class="ep_summaryTriggerNone">
+                            <span class="title" style="vertical-align:middle;">Plot:</span>
+                            <img ng-src="images/plus.png" height="16" width="16" alt="" />
+                        </div>
+                    </td>
+                </tr>
+            </table>
+        </div>
     </div>
 </div>
